--- a/build.xml
+++ b/build.xml
@@ -49,9 +49,12 @@
 
 <!-- extension targets. Uncomment the ones where you want to do custom work
      in between standard targets -->
-<!--
     <target name="-pre-build">
+        <exec executable="util/make_selector">
+            <arg value="${out.res.absolute.dir}"/>
+        </exec>
     </target>
+<!--
     <target name="-pre-compile">
     </target>
 
